Fri Jun 01 10:52:46 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: avoid overflow leading to memory errors

Thu May 31 17:02:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c:
	- fixes, partially from Brent of Perception Technologies Ltd

Thu May 31 10:54:14 EDT 2007	JK Lowden <jklowden@freetds.org>
	* TODO add recent potential bug reports

Thu May 31 14:21:35 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* m4/ac_nullzero.m4: fix cross compile test

Wed May 30 09:55:52 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/threadsafe.c:
	- implement gethostbyname_r with getaddrinfo (for UnixWare 7 and others)

Tue May 29 10:48:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac win32/config.h: cleanup

Fri May 25 11:07:04 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c:
	- remove a FIXME
	* src/odbc/odbc.c:
	- fix bug #1716594 ("SQLFreeStmt with SQL_CLOSE shouldn't 
	  unprepare statement")
	* src/odbc/unittests/Makefile.am src/odbc/unittests/freeclose.c(added)
	* src/odbc/unittests/.cvsignore:
	- add a test for bug #1716594

Mon May 21 14:01:13 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- fix cursor updates, this undo part of change of src/odbc/odbc.c
	  from 1.331 to 1.332, log:
	  Wed Jul 21 16:50:11 CET 2004
	   : some fix for SQLFetch and multiple rows
	  but tests works
	* src/odbc/unittests/cursor1.c: improve

Mon May 21 10:40:40 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor1.c: improve test

Thu May 17 12:32:33 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_checks.c:
	* src/odbc/odbc_util.c:
	- avoid core
	- fix and check invalid values of num_param_rows and curr_param_row

Thu May 17 09:18:19 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/warning.c: improve and comments
