@@ -1,3 +1,8 @@
+Mon Jun 04 10:03:25 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/unittests/.cvsignore src/dblib/unittests/Makefile.am:
+	* src/dblib/unittests/hang.c(added) src/tds/net.c:
+	- fix problem with tds_select (detected by Perception Technologies)
+
 Fri Jun 01 10:52:46 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/token.c: avoid overflow leading to memory errors
 
